# moka-modeller

./: CMakeLists.txt  D00020part.moka  Makefile
src/example-basic/: CMakeLists.txt  example-basic.cc
src/lib-controler/: CMakeLists.txt  controler-operations.cc  controler-operations.hh  controler-parameter.cc  controler-protected-methods.cc  controler-protected-methods.hh  controler-selection.cc  controler-undo-redo.cc  controler.cc  controler.hh
src/lib-controler-gmap/: CMakeLists.txt  controler-gmap-export-xfig.cc  controler-gmap-export-xfig.hh  controler-gmap-object-transformation.cc  controler-gmap-object-transformation.hh  controler-gmap-operations.cc  controler-gmap-operations.hh  controler-gmap-protected-methods.cc  controler-gmap-protected-methods.hh  controler-gmap-rounding.cc  controler-gmap-selection.cc  controler-gmap-types.hh  controler-gmap-undo-redo.cc  controler-gmap-views.cc  controler-gmap-views.hh  controler-gmap.hh
src/lib-controler-gmap/operations/: operations-corefinement.cc  operations-creation.cc  operations-dual.cc  operations-duplication-deletion.cc  operations-extrusion.cc  operations-materialization.cc  operations-merging-insertion-contraction.cc  operations-merging-insertion-contraction.hh  operations-mesh.cc  operations-move-selection.cc  operations-plating.cc  operations-save-load-export.cc  operations-save-load-export.hh  operations-selection.cc  operations-sew-unsew.cc  operations-topology.cc  operations-topology.hh  operations-triangulation-quadrangulation.cc  operations-triangulation.cc
src/lib-controler-gmap/parameter/: parameters-gmap-default-values.hh
src/lib-controler-gmap/parameter/parameter-controler/: parameter-gmap-vertex.cc  parameter-gmap-vertex.hh
src/lib-controler-gmap/parameter/parameter-precompile/: parameter-dart.cc  parameter-dart.hh
src/lib-controler-gmap/precompile/: precompile-dart.cc  precompile-dart.hh  precompile-face.cc  precompile-face.hh  precompile-sew.cc  precompile-vertex.cc
src/lib-controler/precompile/: precompile.hh
src/lib-controler/view/: view-precompile-perspective.cc  view-precompile.hh
src/lib-corefinement/: CMakeLists.txt  corefinement-win32.hh
src/lib-corefinement/2d-propagation/: boolean-operations-2d.hh  corefine-2d-propagation.hh
src/lib-corefinement/3d/: boolean-operations-3d.hh  corefine-3d-face-face.cc  corefine-3d-face-face.hh  corefine-3d.cc  corefine-3d.hh
src/lib-corefinement/common/: boolean-operations.hh  corefine-2d-tools.hh  corefine-3d-tools.hh  corefine.hh  edge-intersection.hh
src/lib-corefinement/interface/: corefinement-api.cc  corefinement-api.hh
src/lib-extraction-images/: CMakeLists.txt  image-3d-extraction.icc  image-3d.icc
src/lib-gmapkernel/: CMakeLists.txt  README
src/lib-gmapkernel/g-map/: g-map-basic.hh  g-map-basic.icc  kernel-types.hh
src/lib-gmapkernel/g-map-generic/: gmg-contraction.cc  gmg-direct-info.cc  gmg-direct-info.hh  gmg-duplication.cc  gmg-duplication.hh  gmg-inline.hh  gmg-inline.icc  gmg-removal.cc  gmg-removal.hh  gmg-selection.cc  gmg-selection.hh  gmg-topology.cc  gmg-topology.hh
src/lib-gmapkernel/g-map-vertex/: dart-vertex.icc  g-map-vertex.hh  gmv-assimp.cc  gmv-assimp.hh  gmv-dual.cc  gmv-homology.cc  gmv-homology.hh  gmv-isomorphisme.cc  gmv-isomorphisme.hh  gmv-merge.cc  gmv-merge.hh  gmv-off.cc  gmv-off.hh  gmv-save.cc  gmv-save.hh  gmv-stop-up.cc  gmv-tetmesh.cc  gmv-tetmesh.hh
src/lib-gmapkernel/tools/geometry/: geoma.hh  geomaData.hh  geometry.hh  geometry.icc  multivector.cc  multivector.hh  multivector.icc  plane.hh
src/lib-gmapkernel/tools/streams/: streams.hh  streams.icc
src/lib-homology/: compute-homology.cc  compute-homology.hh
src/lib-homology/matrices-pmq/: Matrice.cc  Matrice.hh  MatricePMQ.cc  MatricePMQ.hh
src/lib-mesh/: CMakeLists.txt  mesh-interface.cc
src/lib-rounding/: CMakeLists.txt  rounding-vertex.cc
src/lib-spamod/: CMakeLists.txt  spamod-api.cc  spamod-api.hh
src/lib-spamod/main/: analytic-view.cc  euclidian-view.cc  k2-view.cc  topologic-view.cc  voxel-view.cc
src/lib-tools/: CMakeLists.txt  attribute-bounding-box.hh  bounding-box.hh  general-tools.hh  grid-3d.hh  message-macros.hh  time.hh  time.icc  tools-win32.hh
src/mokaQtIhm/: CMakeLists.txt  main.cc
src/mokaQtIhm/object-creations/: creation-boutons.qt.cc  creation-boutons.qt.hh  creation-brin.qt.cc  creation-cylindre.qt.cc  creation-cylindre.qt.hh  creation-maillage.qt.cc  creation-maillage.qt.hh  creation-options.qt.cc  creation-options.qt.hh  creation-polygone.qt.cc  creation-pyramide.qt.cc  creation-pyramide.qt.hh  creation-sphere.qt.cc  creation-tore.qt.cc  creation-tore.qt.hh
src/mokaQtIhm/object-operations/: dialog-homothetie.qt.cc  dialog-homothetie.qt.hh  dialog-moveto.qt.cc  dialog-operations.qt.cc  dialog-operations.qt.hh  dialog-rotation.qt.cc  dialog-translation.qt.cc  operation-chanfreinage.qt.cc  operation-chanfreinage.qt.hh
src/mokaQtIhm/object-options/: options-affichage.qt.cc  options-affichage.qt.hh  options-carac.qt.cc  options-carac.qt.hh  options-couleurs.qt.cc  options-couleurs.qt.hh  options-divers.qt.cc  options-divers.qt.hh  options-extrusion.qt.cc  options-extrusion.qt.hh  options-frame.qt.cc  options-frame.qt.hh  options-homology.qt.cc  options-homology.qt.hh  options-interpolation.qt.cc  options-interpolation.qt.hh  options-ponderation.qt.cc  options-ponderation.qt.hh  options-surfacic-homology.qt.cc  options-surfacic-homology.qt.hh  options-volumic-homology.qt.cc  options-volumic-homology.qt.hh  options-vue.qt.cc  options-vue.qt.hh
src/mokaQtIhm/utils/: IdWidgets.qt.hh  SpaceWidget.qt.hh  floatSpinBox.qt.hh
src/mokaQtIhm/windows/: dialog-do.qt.cc  dialog-do.qt.hh  gl-multi-window.qt.cc  gl-multi-window.qt.hh  gl-window.qt.cc  gl-window.qt.hh  menu-bar.qt.cc  menu-bar.qt.hh  select-bar.qt.cc  select-bar.qt.hh  window.qt.cc  window.qt.hh
src/submapTest/: CMakeLists.txt  main.cc
src/tools/: CMakeLists.txt  convert-off-to-moka.cc  cubical-homology.cc  homology.cc  homology2d.cc
